--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(/usr/include.SDL2)
 find_package(SDL2 REQUIRED)
 include_directories(${SDL_2_INCLUDE_DIRS})
-add_executable(untitled main.cpp)
+add_executable(untitled main.cpp
+        Player.h
+        ImportIMG.h
+        LoadAnimation.h)
 #target_link_libraries(untitled ${SDL2_LIBRARIES})
 target_link_libraries(untitled PRIVATE SDL2 SDL2_image)
